# new-project

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
docs/: alpaca-mcp-setup.md
examples/: spy_chain.py
research/: champions_strategy_records.json  elder_1993_strategy_records.json  options_strategy_intelligence.json  strategy_records.json
scripts/: backtest_real_chains.py  backtest_strategy.py  build_regime_backtest_data.py  heal_orphans.py  reconcile_iwm_orphan.py  regime_backtest.py  screen_etf_universe.py  smoke_test.py
src/options_bot/: __main__.py  adaptive.py  alpaca_quotes.py  analyst_revisions.py  breadth.py  broker.py  circuit_breaker.py  confidence_score.py  contracts.py  credit_regime.py  dividends.py  earnings_calendar.py  exceptions.py  gex_analysis.py  greeks.py  hurst.py  iv_quality.py  logging_config.py  macro_blackout.py  market_data.py  massive_data.py  metrics.py  orchestrator.py  parity_check.py  realized_vol.py  regime.py  risk.py  risk_profiles.py  scanner.py  sec_signals.py  sentiment.py  spread_math.py  stat_validation.py  strategy.py  strategy_0dte.py  stress_testing.py  system_validator.py  tape.py  trendlines.py  universe.py  (+4 more)
tests/: test_integration.py
