[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "options-bot"
version = "0.1.0"
description = "Options trading pipeline: yfinance data → Greeks → strategy → risk → execution"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.0",
    "scipy>=1.12.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
lumibot = [
    "lumibot>=3.0.0",
    "alpaca-py>=0.26.0",
]
research = [
    "optopsy>=2.3.0",
    "optionlab>=1.0.0",
    "fredapi>=0.5.0",
    "cot-reports>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
