[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "options-bot"
version = "0.1.0"
description = "Options trading pipeline: yfinance data → Greeks → strategy → risk → execution"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.0",
    "scipy>=1.12.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "alpaca-py>=0.26.0",
    "apscheduler>=3.10.0",
    "pandas-market-calendars>=4.3.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "fredapi>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/options_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
